--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
             <div class="cards-container">
                 <div class="selection-card" onclick="selectCalculator('transformer')">
                     <div class="card-image">
-                        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 200 200'%3E%3Cg fill='%234a6491'%3E%3Crect x='60' y='40' width='80' height='120' fill='%232c3e50'/%3E%3Ccircle cx='70' cy='100' r='25' fill='none' stroke='%233498db' stroke-width='4'/%3E%3Ccircle cx='130' cy='100' r='25' fill='none' stroke='%233498db' stroke-width='4'/%3E%3Cline x1='50' y1='60' x2='40' y2='60' stroke='%233498db' stroke-width='3'/%3E%3Cline x1='50' y1='140' x2='40' y2='140' stroke='%233498db' stroke-width='3'/%3E%3Cline x1='150' y1='60' x2='160' y2='60' stroke='%233498db' stroke-width='3'/%3E%3Cline x1='150' y1='140' x2='160' y2='140' stroke='%233498db' stroke-width='3'/%3E%3C/g%3E%3C/svg%3E" alt="ترانسفورماتور">
+                        <img src="t2.png" alt="ترانسفورماتور">
                     </div>
                     <div class="card-content">
                         <h2>محاسبات ترانسفورماتور</h2>
@@ -590,7 +590,7 @@
 
                 <div class="selection-card" onclick="selectCalculator('motor')">
                     <div class="card-image">
-                        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 200 200'%3E%3Cg fill='%234a6491'%3E%3Ccircle cx='100' cy='100' r='60' fill='%232c3e50'/%3E%3Ccircle cx='100' cy='100' r='40' fill='none' stroke='%233498db' stroke-width='4'/%3E%3Ccircle cx='100' cy='100' r='20' fill='none' stroke='%233498db' stroke-width='3'/%3E%3Cline x1='100' y1='40' x2='100' y2='60' stroke='%233498db' stroke-width='3'/%3E%3Cline x1='100' y1='140' x2='100' y2='160' stroke='%233498db' stroke-width='3'/%3E%3Cline x1='40' y1='100' x2='60' y2='100' stroke='%233498db' stroke-width='3'/%3E%3Cline x1='140' y1='100' x2='160' y2='100' stroke='%233498db' stroke-width='3'/%3E%3C/g%3E%3C/svg%3E" alt="الکتروموتور">
+                        <img src="t1.png" alt="الکتروموتور">
                     </div>
                     <div class="card-content">
                         <h2>محاسبات سیم پیچی الکتروموتور</h2>
