--- a/index.html
+++ b/index.html
@@ -12,12 +12,21 @@
             --light-bg: #f8fafc;
         }
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Vazir', 'Tahoma', Arial, sans-serif;
-        }
+  /* تعریف فونت Saad */
+@font-face {
+    font-family: 'Saad';
+    src: url('fonts/Saad.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Saad', 'Tahoma', Arial, sans-serif;
+}
 
         body {
             background: linear-gradient(135deg, #1e293b, #1e40af, #0891b2);
@@ -1512,4 +1521,5 @@
     </script>
 </body>
 </html>
+
 
