--- a/index.html
+++ b/index.html
@@ -12,20 +12,11 @@
             --light-bg: #f8fafc;
         }
 
-  /* تعریف فونت Saad */
 @font-face {
     font-family: 'Saad';
-    src: url('fonts/Saad.otf') format('opentype');
+    src: url('Saad.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Saad', 'Tahoma', Arial, sans-serif;
 }
 
         body {
@@ -1521,5 +1512,6 @@
     </script>
 </body>
 </html>
+
 
 
