--- a/index.html
+++ b/index.html
@@ -12,20 +12,28 @@
             --light-bg: #f8fafc;
         }
 
-   * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Vazir', 'Tahoma', Arial, sans-serif;
-        }
+   /* تعریف فونت Tabriz */
+@font-face {
+    font-family: 'Tabriz';
+    src: url('fonts/tabriz.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
 
-        body {
-            background: linear-gradient(135deg, #1e293b, #1e40af, #0891b2);
-            color: #333;
-            line-height: 1.6;
-            min-height: 100vh;
-        }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Tabriz', 'Tahoma', Arial, sans-serif;
+}
 
+body {
+    background: linear-gradient(135deg, #1e293b, #1e40af, #0891b2);
+    color: #333;
+    line-height: 1.6;
+    min-height: 100vh;
+}
         /* Animations */
         @keyframes fadeIn {
             from { opacity: 0; transform: scale(0.95); }
@@ -1512,6 +1520,7 @@
     </script>
 </body>
 </html>
+
 
 
 
