--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
     box-sizing: border-box;
     font-family: 'Tabriz', 'Tahoma', Arial, sans-serif;
 }
-
+        
+<!-- Favicon for all devices -->
+<link rel="icon" type="image/png" href="t4.png">
+<link rel="apple-touch-icon" href="t4.png">
+<link rel="shortcut icon" href="t4.png">
+        
 body {
     background: linear-gradient(135deg, #1e293b, #1e40af, #0891b2);
     color: #333;
@@ -1520,6 +1525,7 @@ body {
     </script>
 </body>
 </html>
+
 
 
 
