--- a/index.html
+++ b/index.html
@@ -862,8 +862,8 @@ body {
             to { transform: rotate(360deg); }
         }
         
-<!-- Favicon for browser tab -->
-<link rel="icon" type="image/png" href="t4.png">
+  <!-- Favicon ماشین حساب -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><linearGradient id='grad' x1='0%' y1='0%' x2='100%' y2='100%'><stop offset='0%' stop-color='%232563eb'/><stop offset='100%' stop-color='%230891b2'/></linearGradient></defs><rect width='100' height='100' fill='url(%23grad)' rx='15'/><rect x='15' y='15' width='70' height='70' fill='%23f8fafc' rx='8'/><rect x='25' y='25' width='50' height='15' fill='%23e2e8f0' rx='3'/><rect x='25' y='50' width='15' height='15' fill='%23cbd5e1' rx='3'/><rect x='45' y='50' width='15' height='15' fill='%23cbd5e1' rx='3'/><rect x='65' y='50' width='15' height='15' fill='%23cbd5e1' rx='3'/><rect x='25' y='70' width='15' height='15' fill='%23cbd5e1' rx='3'/><rect x='45' y='70' width='15' height='15' fill='%23cbd5e1' rx='3'/><rect x='65' y='70' width='15' height='15' fill='%232563eb' rx='3'/></svg>">
         
     </style>
 </head>
@@ -1525,6 +1525,7 @@ body {
     </script>
 </body>
 </html>
+
 
 
 
