--- a/index.html
+++ b/index.html
@@ -1796,7 +1796,7 @@
         </div>
         
         <div class="sidebar-footer">
-            نسخه ۲.۰ | طراحی توسط پارسا
+         V2.9.8 | Developed by Parsa
         </div>
     </div>
     
@@ -1943,7 +1943,7 @@
                     </div>
                     <div class="card-content">
                         <h2>
-                            <span class="emoji">⚙️</span>
+                            <span class="emoji"></span>
                             <span>محاسبات الکتروموتور</span>
                         </h2>
                         <p>محاسبه پارامترهای سیم پیچی الکتروموتور سه فاز با دقت بالا و پشتیبانی از انواع سیم پیچی</p>
@@ -1961,7 +1961,7 @@
                     </div>
                     <div class="card-content">
                         <h2>
-                            <span class="emoji">📊</span>
+                            <span class="emoji"></span>
                             <span>محاسبات ترانسفورماتور</span>
                         </h2>
                         <p>محاسبه دقیق تمام پارامترهای ترانسفورماتور با الگوریتم پیشرفته و پشتیبانی از انواع هسته‌های مختلف</p>
@@ -1976,8 +1976,8 @@
             <!-- Footer Badge -->
             <div class="footer-badge">
                 <div class="badge">
-                    <span>طراحی و توسعه توسط</span>
-                    <strong>پارسا</strong>
+                    <span>Developed by</span>
+                    <strong>PcA</strong>
                     <span class="version-tag">نسخه ۲.۰</span>
                 </div>
             </div>
@@ -2130,10 +2130,10 @@
             <!-- Footer -->
             <div class="calc-footer">
                 <div class="badge">
-                    <span>طراحی توسط</span>
-                    <strong>پارسا</strong>
+                    <span>Developed by</span>
+                    <strong>Parsa</strong>
                     <span>|</span>
-                    <span>نسخه ۲.۰</span>
+                    <span>V2.9.8</span>
                 </div>
             </div>
         </div>
@@ -2314,10 +2314,10 @@
             <!-- Footer -->
             <div class="calc-footer">
                 <div class="badge">
-                    <span>طراحی توسط</span>
-                    <strong>پارسا</strong>
+                    <span>Developed by</span>
+                    <strong>Parsa</strong>
                     <span>|</span>
-                    <span>نسخه ۲.۰</span>
+                    <span>V2.9.8</span>
                 </div>
             </div>
         </div>
@@ -3329,3 +3329,4 @@
     </script>
 </body>
 </html>
+
