--- a/index.html
+++ b/index.html
@@ -1976,8 +1976,8 @@
             <!-- Footer Badge -->
             <div class="footer-badge">
                 <div class="badge">
-                    <span>Developed by</span>
-                    <strong>PcA</strong>
+                    <span>Developed by PcA </strong>
+                    <strong></strong>
                     <span class="version-tag">نسخه ۲.۰</span>
                 </div>
             </div>
@@ -3329,4 +3329,5 @@
     </script>
 </body>
 </html>
+
 
