--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ماشین حساب تخصصی الکتریکال - نسخه پیشرفته</title>
+    <title>PCA | Power Calculator Advanced</title>
     <!-- SheetJS Library for Excel Export -->
     <script src="https://cdn.sheetjs.com/xlsx-0.20.0/package/dist/xlsx.full.min.js"></script>
     <style>
@@ -1978,7 +1978,7 @@
                 <div class="badge">
                     <span>Developed by PcA </strong>
                     <strong></strong>
-                    <span class="version-tag">نسخه ۲.۰</span>
+                    <span class="version-tag">V2.9.8</span>
                 </div>
             </div>
         </div>
@@ -3329,5 +3329,6 @@
     </script>
 </body>
 </html>
+
 
 
